# adventofcode

./: .gitignore
2020/dec1/: part1_2.py
2020/dec11/: solution.py
2020/dec13/: part2.py  solution.py
2020/dec14/: part1.py
2020/dec15/: solution.py
2020/dec19/: solution.py
2020/dec22/: solution.py
2020/dec23/: solution.py
2020/dec24/: solution.py
2020/dec4/: solution.py
2020/dec6/: solution.py
2020/dec7/: solution.py
2020/dec9/: solutions.py
2021/dec1/: Cargo.toml  solution.py
2021/dec10/: solution.py
2021/dec11/: solution.py
2021/dec12/: solution.py
2021/dec13/: solution.py
2021/dec14/: solution.py
2021/dec15/: solution.py
2021/dec16/: solution.py
2021/dec17/: solution.py
2022/: .gitignore  Cargo.toml  README.md  __main__.py  base.py  create_folder.py  path_finding.py  plot_timing.py  puzzle.py  run_all_solutions.sh  run_all_tests.sh  timing.py
2023/: README.md  art.txt  main.py
2024/: Dockerfile  README.md  art.txt  main.py
2025/: .dockerignore  Dockerfile  README.md  art.txt  main.py
dec1/: part2_1.py
dec1-1/: solution1.py
dec10/: solution.py
dec11/: solution.py
dec12/: solution.py
dec14/: part2.py
dec16/: solution.py
dec17/: part1.py  part2.py  solution.py
dec18/: solution.py
dec19/: solution.py
dec2/: solution.py
dec20/: solution.py
dec21/: solution.py
dec23/: solution.py
dec23/cpp/dec23_part2/: CMakeLists.txt  CrabCups.h  main.cpp  utils.h
dec24/: solution.py
dec25/: solution.py
dec3/: part1.py  part2.py
dec5/: solution.py
dec6/: solution.py
dec8/: solution.py
(+228 files in other folders)
